--- a/package.json
+++ b/package.json
@@ -32,15 +32,17 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
+    "@typescript-eslint/parser": "^5.0.1",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.52.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.6",
-    "typescript": "^5.2.2",
+    "postcss": "^8.4.41",
+    "prettier": "^3.1.0",
+    "prettier-eslint": "^16.1.2",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^4.4.4",
     "vite": "^5.2.0",
     "vite-plugin-svgr": "^4.2.0"
   }
