--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,43 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "skipLibCheck": true,
+    "compilerOptions": {
+        "baseUrl": ".",
+        "target": "es2022",
+        "useDefineForClassFields": true,
+        "lib": ["ES2020", "DOM", "DOM.Iterable"],
+        "module": "ESNext",
+        "skipLibCheck": true,
 
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
+        /* Bundler mode */
+        "moduleResolution": "bundler",
+        "allowImportingTsExtensions": true,
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
+        "jsx": "react-jsx",
 
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
-  },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }],
-  "lib": ["WebWorker"]
+        /* Linting */
+        "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noFallthroughCasesInSwitch": true,
+
+        /* Paths */
+        "paths": {
+            "@/*": ["src/*"],
+            "@/utils/*": ["src/utils/*"],
+            "@/pages/*": ["src/pages"],
+            "@/types/*": ["src/types/*"],
+            "@/assets/*": ["src/assets/*"],
+            "@/components/*": ["src/components/*"],
+            "@/icons": ["src/components/Icons"],
+            "@/constraints": ["src/constraints"],
+            "@/layouts": ["src/components/Layouts"],
+            "@/contexts": ["src/contexts"],
+            "@/hooks": ["src/hooks"]
+        }
+    },
+    "include": ["src"],
+    "exclude": ["src/sample"],
+    "references": [{ "path": "./tsconfig.node.json" }],
+    "lib": ["WebWorker"]
 }
