--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
         "ms-vscode-remote.remote-containers",
         "ms-ceintl.vscode-language-pack-pt-br",
         "rvest.vs-code-prettier-eslint",
-        "bradlc.vscode-tailwindcss"
+        "bradlc.vscode-tailwindcss",
+        "ms-azuretools.vscode-docker"
     ]
 }
