feat: novo passo para workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
         
       - name: Build project
         run: npm run build
+
+      - name: Test Secret
+        run: echo ${{ secrets.FTP_SERVER }}
         
       - name: Deploy to Hostinger 
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
