--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,4 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}  
           server-dir: /public_html/
           local-dir: ./dist/     
+          port: 22
