--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "tailwindcss": "^3.4.10",
     "typescript": "^4.4.4",
     "vite": "^5.2.0",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
