--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "antd": "^5.20.4",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
