--- a/package.json
+++ b/package.json
@@ -1,51 +1,53 @@
 {
-  "name": "waiwai-frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-regular-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "antd": "^5.20.4",
-    "axios": "^1.7.2",
-    "jwt-decode": "^4.0.0",
-    "lodash": "^4.17.21",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-fontawesome": "^1.7.1",
-    "react-router-dom": "^6.23.1",
-    "styled-components": "^6.1.12",
-    "uuid": "^10.0.0"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.13",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^5.0.1",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.52.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "postcss": "^8.4.41",
-    "prettier": "^3.1.0",
-    "prettier-eslint": "^16.1.2",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^4.4.4",
-    "vite": "^5.2.0",
-    "vite-plugin-svgr": "^4.2.0",
-    "vite-tsconfig-paths": "^5.0.1"
-  }
+    "name": "waiwai-frontend",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.6.0",
+        "@fortawesome/free-brands-svg-icons": "^6.6.0",
+        "@fortawesome/free-regular-svg-icons": "^6.6.0",
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/react-fontawesome": "^0.2.2",
+        "@tanstack/react-query": "^5.56.2",
+        "antd": "^5.20.4",
+        "axios": "^1.7.2",
+        "jwt-decode": "^4.0.0",
+        "lodash": "^4.17.21",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-fontawesome": "^1.7.1",
+        "react-intersection-observer": "^9.13.1",
+        "react-router-dom": "^6.23.1",
+        "styled-components": "^6.1.12",
+        "uuid": "^10.0.0"
+    },
+    "devDependencies": {
+        "@tailwindcss/typography": "^0.5.13",
+        "@types/react": "^18.2.66",
+        "@types/react-dom": "^18.2.22",
+        "@types/react-router-dom": "^5.3.3",
+        "@types/uuid": "^10.0.0",
+        "@typescript-eslint/eslint-plugin": "^8.6.0",
+        "@typescript-eslint/parser": "^8.0.0",
+        "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^8.52.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.6",
+        "postcss": "^8.4.41",
+        "prettier": "^3.1.0",
+        "prettier-eslint": "^16.1.2",
+        "tailwindcss": "^3.4.10",
+        "typescript": "^4.4.4",
+        "vite": "^5.2.0",
+        "vite-plugin-svgr": "^4.2.0",
+        "vite-tsconfig-paths": "^5.0.1"
+    }
 }
